Improve deployment - Pin now version - Move print class names to styled componets - Fix print overflow of first apge

--- a/src/app.css
+++ b/src/app.css
@@ -151,17 +151,7 @@ blockquote {
   }
 }
 
-@media screen {
-  .screen-hidden {
-    display: none;
-  }
-}
-
 @media print {
-  .print-hidden {
-    display: none;
-  }
-
   body {
     font-size: 75%;
     --outline: #cecece;
